--- a/main.css
+++ b/main.css
@@ -88,6 +88,10 @@ img {
     background-color: #064F34;
 }
 
+/* как сделать затемнение картинок при hover эффекте?  */
+
+
+
 .country-name-container {
     margin-top: -15px;
     width: 580px;
@@ -106,4 +110,72 @@ img {
     font-weight: bold;
     font-size: x-large;
 
+}
+
+.Introduction {
+    position: relative;
+    bottom: -20px;
+    right: 550px;
+    font-family: "Inter", sans-serif;
+    font-weight: 900;
+    font-size: 400%;
+}
+
+.Black-block {
+    position: relative;
+    bottom: -110px;
+    height: 1080px;
+    width: 100%; 
+    /* как убрать белые границы и при этом не создавать горизонтальный скролл? */
+    background-color: #252525;
+}
+
+
+.Quote {
+    position: relative;
+    top: 250px;
+    font-family: "Inter", sans-serif;
+    font-weight: 900;
+    font-size: 400%;
+    color: white;
+    text-align: center;
+}
+
+
+.Company-text {
+    position: relative;
+    top: 250px;
+    font-family: "Inter", sans-serif;
+    font-weight: 600;
+    font-size: 150%;
+    color: #D3D3D3;
+    text-align: center;
+}
+
+.Register-button {
+    position: relative;
+    height: 75px;
+    width: 350px;
+    background-color: #064F34;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    font-size: 150%;
+
+}
+
+
+.Register-button:hover {
+    border-style: solid;
+    border-color: white;
+    border-width: 2px;
+}
+
+.Center-button {
+    margin: 0;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
