--- a/countries.css
+++ b/countries.css
@@ -100,3 +100,103 @@ header a {
     transform: translate(-50%, -50%);
 }
 
+.Center-button3 {
+    margin: 0;
+    position: absolute;
+    top: 38%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.Center-button4 {
+    margin: 0;
+    position: absolute;
+    top: 47%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.Center-button5 {
+    margin: 0;
+    position: absolute;
+    top: 56%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.Center-button6 {
+    margin: 0;
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.Center-button7 {
+    margin: 0;
+    position: absolute;
+    top: 74%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.Center-button8 {
+    margin: 0;
+    position: absolute;
+    top: 83%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+
+.Center-button9 {
+    margin: 0;
+    position: absolute;
+    top: 92%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.return {
+    position: relative;
+    top: 100px;
+    left: 850px;
+    color: black;
+    font-family: "Open Sans", sans-serif;
+    font-weight: bold;
+    font-size: xx-large;
+    text-decoration: none;
+    padding-bottom: 4px;
+    margin: 20px;
+    transition: color 0.3s ease-in-out;
+}
+
+.return::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: black;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.3s ease-in-out;
+
+}
+
+.return:hover {
+    color: black;
+}
+
+.return:hover::after {
+    visibility: visible;
+    transform: scaleX(1);
+}
