--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ header {
     top: 0;
     left: 0;
     width: calc(100% - 20px);
-    background-color: black;
+    background-color: #1E1E1E;
     display: flex;
     align-items: center; 
     justify-content: center;
@@ -78,6 +78,7 @@ img {
     height: 338px;
     width: 580px;
     border-radius: 20px;
+    transition: 0.5s;
 }
 
 
@@ -100,7 +101,8 @@ img {
     width: 580px;
     height: 70px;
     border-radius: 20px;
-    background-color: black;
+    background-color: #1E1E1E;
+    transition: 0.5s;
 }
 
 .country-name {
@@ -122,6 +124,7 @@ img {
     font-family: "Inter", sans-serif;
     font-weight: 900;
     font-size: 400%;
+    color: #1E1E1E;
 }
 
 .Black-block {
@@ -160,17 +163,16 @@ img {
     width: 350px;
     background-color: #064F34;
     color: white;
-    border: none;
+    border: 2px solid transparent;
     border-radius: 20px;
     font-size: 150%;
+    transition: 0.5s;
 
 }
 
 
 .Register-button:hover {
-    border-style: solid;
     border-color: white;
-    border-width: 2px;
 }
 
 .Center-button {
