--- a/Profile.css
+++ b/Profile.css
@@ -95,7 +95,7 @@ header a {
 
 .return {
     position: relative;
-    top: -360px;
+    top: -440px;
     left: 850px;
     color: #1E1E1E;
     font-family: "Open Sans", sans-serif;
@@ -136,7 +136,7 @@ header a {
     width: 100%;
     border-radius: 4px;
     border: 2px solid #064F34;;
-    background-color:  gainsboro;
+    background-color:  #f2f2f2;
     padding: 20px;
 }
 
@@ -149,6 +149,8 @@ form {
 label {
   min-width: 48%;
   margin-bottom: 10px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 600;
 }
 
 input[type=text], select {
@@ -169,6 +171,8 @@ input[type=submit] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  font-family: "Inter", sans-serif;
+  font-size: large;
 }
 
 @media screen and (max-width: 600px) {
